tests/samples/invalid/missing_return_type.pn
fn foo()
{
	return: true
}

fn main()
{
	return: 500
}
